<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E88E5"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/homeDrawer"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_home_white_24dp"
                android:drawablePadding="15dp"
                android:elevation="5dp"
                android:gravity="start"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:layout_marginLeft="10dp"
                android:text="@string/home"
                android:textSize="20dp"
                android:textStyle="bold"
                android:onClick="HOME"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                />

            <TextView
                android:id="@+id/shareappDrawer"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_share_white_24dp"
                android:elevation="5dp"
                android:gravity="start"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/white"
                android:layout_gravity=""
                android:padding="10dp"
                android:onClick="SHARE_THIS_APP"
                android:text="@string/Share"
                android:textSize="20dp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                />

            <TextView
                android:id="@+id/rateTheApp"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_rate_review_white_24dp"
                android:elevation="5dp"
                android:gravity="start"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:onClick="RATE_THIS_APP"
                android:text="@string/rating"
                android:textSize="20dp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                />
            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/white"
                android:drawablePadding="15dp"
                android:elevation="5dp"
                android:onClick="LOGOUT"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/logout"
                android:textSize="20dp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>