<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="2dp"
        android:elevation="10dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_marginLeft="10dp"
                android:id="@+id/edit_product"
                android:layout_gravity="center"
                android:background="@drawable/ic_border_color_black_18dp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2.6"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="25dp"
                    android:layout_alignParentLeft="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ItemName"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:id="@+id/ItemNAme"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Quantity"
                        android:id="@+id/Quantity"
                        android:textSize="15dp"/>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawableLeft="@drawable/money"
                    android:text="@string/ten"
                    android:layout_marginRight="15dp"
                    android:id="@+id/PriceRate"
                    android:textSize="40dp"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>