<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="4dp"
        android:elevation="10dp"
        app:cardElevation="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/fpiName"
                android:textSize="25dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:id="@+id/title"
                android:gravity="center|start"/>

            <TextView
                android:id="@+id/match"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="top|center"
                android:padding="5dp"
                android:text="@string/matchPercent"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/GainPercent"
                android:textSize="10dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:layout_gravity="top"
                android:id="@+id/gain"
                android:gravity="top|center"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"

                    android:textSize="10dp"
                    android:gravity="start|center"
                    android:textStyle="bold"
                    android:id="@+id/location_topFpi"

                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/MatchNo."
                    android:textSize="22dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:id="@+id/Matchpercent"
                    android:layout_gravity="top"
                    android:gravity="center|top"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/GainNo."
                    android:textSize="22dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:id="@+id/Gainpercent"
                    android:layout_gravity="top"
                    android:gravity="center|top"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>