<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/login_progress"
        android:layout_alignParentStart="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_left"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:id="@+id/back"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/signUp_title"
                   android:textColor="@android:color/white"
                    android:textSize="40dp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:layout_margin="10dp"/>
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:paddingLeft="30dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:background="@drawable/edges"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="-35dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:background="@drawable/edges"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_enhanced_encryption"
                    android:drawablePadding="-35dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                >

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edges"
                    android:drawablePadding="-35dp"
                    android:drawableLeft="@drawable/ic_phone"
                    android:hint="Phone "
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                >

                <EditText
                    android:id="@+id/Licence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Licence No."
                    android:drawablePadding="-35dp"
                    android:gravity="center"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapCharacters"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_confirmation_number"
                    android:maxLines="1"
                    android:background="@drawable/edges"
                    android:singleLine="true"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                >

                <EditText
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Company name"
                    android:drawablePadding="-35dp"
                    android:background="@drawable/edges"
                    android:padding="10dp"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:textAllCaps="true"
                    android:singleLine="true"
                    android:gravity="center"
                    android:drawableLeft="@drawable/ic_work"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>

            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                />


            <Button
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/signUp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:background="@drawable/round_button"/>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
</RelativeLayout>